Revision history for SVGPDF

0.087	2024-06-21

	- Fix missing transparency (default background-color -> none).
	- Prevent some unwanted verbose messages.

0.086	2024-02-14

	- Change font and text callback api to use hash parameter.
	- Small doc/pod fixes.

0.085	2024-01-29

	- Fix some tests for longdouble perls.
	- Update copyright years.

0.084	2024-01-28

	- Change license info.
	- Add gif, tif(f) and p[bgnp]m to recognized image extensions.
	- Limited support for URLs in font-face sources.
	- Support CSS for element#id.
	- Support CSS for element.class.
	- Remove xt tests from MANIFEST.

0.083	2023-12-25

	- Satisfy CPAN indexer.

0.082	2023-12-25

	- Satisfy CPAN upload.

0.081	2023-12-22

	- Add --notest for svpdg script to suppress page marks.
	- Explicitly end paths that are not stroked/filled (Issue #2.2).

0.080	2023-11-07

	- Add --ppi option for svgpdf script.
	- Add matrix multiply method (unused).

0.070	2023-09-08

	- Add callback for text handling.

0.062	2023-09-07

	- Internal: Flipped coordinates.
	- Internal: Rework Path.
	- Leave vwidth/vheight as is so caller can scale to font size.
	- Add rounded rectangles.
	- Auto def for <g> with id.
	- Add warning when viewBox and width/height are disproportional.
	- Relax warning when viewBox and width/height are disproportional.
	- Add sample programs, update documentation.
	- Fix some pixels versus points confusion.
	- Simplify font handler callback.

0.060	2023-08-18

	- Change package name to SVGPDF.
	- Rename PDF::* and SVG::* to SVGPDF.
	- Adjust all modules and tests.
	- Move contrib bogen code to SVGPDF::Contrib::Bogen.
	- Add regression test for PDF::API2 and PDF::Builder.
	- Add warning that rounded rectangles are not yet supported.
	- Add warning in unhandled subelements in <text>
	- (Parser) Enable whitespace tokes for abc2svg.
	- (Text/TSpan) Fix fill/color use.
	- (TextElement) Reduce whitespace.